--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
 
 html, body { margin: 0; padding: 0; overflow: hidden; height: 100% }
 
-#namesCanvas { height: 600px; }
+#prize { text-align: center }
+
+#namesCanvas { height: 100%; position: absolute; top: 0; width: 100%; z-index: 999 }
