--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 
-html, body { margin: 0; padding: 0; overflow: hidden; height: 100% }
+html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-color: #333 }
 
 #prize { text-align: center }
 
