--- a/index.css
+++ b/index.css
@@ -9,9 +9,9 @@ html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-c
 #names { width: 60%; height: 50%; position: fixed; top: 30%; left: 40% }
 #roller { width: 100%; height: 100%; list-style: none; padding: 0; margin: 0;
     backface-visibility: visible; perspective: 100vw; transform-style: preserve-3d; }
-.name { height: 100%; width: 360px; font-size: 120px; line-height: 150%; text-align: center; color: white;
-    display: table-cell; vertical-align: middle; position: absolute; transition: all 0.3s ease; }
+.name { height: 100%; width: 360px; font-size: 120px; line-height: 40vh; text-align: center; color: white;
+    display: table-cell; position: absolute; transition: all 0.3s ease; }
 
-.name.prev { transform: scale(0.2,0.2) translateX( -180vw ) rotateY( 100deg ); opacity: 0.1 }
+.name.prev { transform: scale(0.5,0.5) translateX( -30vw ) rotateY( 120deg ); opacity: 0.2 }
 .name.pres { transform: translateZ(-20vw); opacity: 1 }
 .name.past { transform: translateX( 30vw ) translateZ(40vw) rotateY( -20deg ); opacity: 0 }
