--- a/index.css
+++ b/index.css
@@ -4,14 +4,16 @@ html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-c
 
 #titleCanvas { height: 40%; position: absolute; top: 0; width: 100%; z-index: 9 }
 
-#prize { width: 40%; height: 50%; text-align: center; position: fixed; top: 30%; left: 0 }
+#prize { width: 40%; height: 50%; text-align: right; position: fixed; top: 30%; left: 0;
+    transform-style: preserve-3d; perspective: 100vw }
+.priz { width: 80%; height: 100%; list-style: none; padding: 0; margin: 0; color: #e79; line-height: 50vh }
 
 #names { width: 60%; height: 50%; position: fixed; top: 30%; left: 40% }
 #roller { width: 100%; height: 100%; list-style: none; padding: 0; margin: 0;
     backface-visibility: visible; perspective: 100vw; transform-style: preserve-3d; }
-.name { height: 100%; width: 360px; font-size: 120px; line-height: 40vh; text-align: center; color: white;
-    display: table-cell; position: absolute; transition: all 0.3s ease; }
+.name { height: 100%; width: 360px; font-size: 120px; line-height: 50vh; text-align: center; color: white;
+    display: table-cell; position: absolute; transition: all 0.4s ease; }
 
-.name.prev { transform: scale(0.5,0.5) translateX( -30vw ) rotateY( 120deg ); opacity: 0.2 }
+.name.prev { transform: scale(0.5,0.5) translateX( -25vw ) rotateY( 120deg ); opacity: 0.2 }
 .name.pres { transform: translateZ(-20vw); opacity: 1 }
 .name.past { transform: translateX( 30vw ) translateZ(40vw) rotateY( -20deg ); opacity: 0 }
