--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 div { box-sizing: border-box }
-html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-color: #333 }
+html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-color: #333; font-family: "Open Sans", Arial, sans-serif }
 
 #titleCanvas { height: 40%; position: absolute; top: 0; width: 100%; z-index: 9 }
 
@@ -12,7 +12,7 @@ html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-c
 #roller { width: 100%; height: 100%; list-style: none; padding: 0; margin: 0;
     backface-visibility: visible; perspective: 100vw; transform-style: preserve-3d; }
 .name { height: 100%; width: 360px; font-size: 120px; line-height: 50vh; text-align: center; color: white;
-    display: table-cell; position: absolute; transition: all 0.4s ease; }
+    display: table-cell; position: absolute; transition: all 0.4s ease; font-weight: bold }
 
 .name.prev { transform: scale(0.5,0.5) translateX( -25vw ) rotateY( 120deg ); opacity: 0.2 }
 .name.pres { transform: translateZ(-20vw); opacity: 1 }
