--- a/index.css
+++ b/index.css
@@ -12,8 +12,8 @@ html, body { margin: 0; padding: 0; overflow: hidden; height: 100%; background-c
 #roller { width: 100%; height: 100%; list-style: none; padding: 0; margin: 0;
     backface-visibility: visible; perspective: 100vw; transform-style: preserve-3d; }
 .name { height: 100%; width: 100%; font-size: 100px; line-height: 50vh; text-align: center; color: white;
-    display: table-cell; position: absolute; transition: all 0.4s ease; font-weight: bold; background-color: #555 }
+    display: table-cell; position: absolute; transition: all 0.36s ease; font-weight: bold; background-color: #444 }
 
 .name.prev { transform: scale(0.5,0.5) translateX( -40vw ) rotateY( 100deg ); opacity: 0.2 }
-.name.pres { }
+.name.pres { box-shadow: 0 0 8vw rgba(0,0,0,0.4) }
 .name.past { transform: translateX( 30vw ) translateZ(40vw) rotateY( -20deg ); opacity: 0 }
